# linenoise.cpp

./: .gitignore  BUILD  CMakeLists.txt  MODULE.bazel  README.markdown  example.cpp  linenoise.cpp  linenoise.h  llama-run-cli.cpp  meson.build
.github/workflows/: ci.yml  cmake-multi-platform.yml
c_version/: linenoise.c  linenoise.h
scripts/: build_and_test.sh  generate_unicode_data_tables.py
